list와 for 반복문. list comprehension.

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNMwcnEW1nkowP8tvLyN4rb",
+      "authorship_tag": "ABX9TyPla+2Hh9WBudo1TkojUjkp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1480,6 +1480,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "odds = []  # 홀수들만 저장하기 위한 빈 리스트\n",
+        "for x in numbers:  # numbers의 아이템들을 처음부터 끝까지 순서대로 반복하면서\n",
+        "    if x % 2:  # if x % 2 == 1: x가 홀수이면\n",
+        "        odds.append(x)  # odds에 아이템을 추가.\n",
+        "\n",
+        "print(odds)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iUh7hcEwa_wN",
+        "outputId": "49f7853d-0c61-4fe6-81c3-e50b1abeb2a4"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[41, 87, 23, 41]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Ex. 2\n",
@@ -1495,12 +1523,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "integers = []  # 정수 난수들을 저장하기 위한 빈 리스트\n",
+        "for _ in range(10):  # 10번 반복\n",
+        "    integers.append(random.randrange(-10, 11))  # integers에 난수 추가.\n",
+        "\n",
+        "print(integers)"
+      ],
       "metadata": {
-        "id": "eomTZhVi57Kj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eomTZhVi57Kj",
+        "outputId": "6a7454b6-32e6-4864-eb06-5f338e8630dd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-4, 6, 3, 10, 0, -5, 6, 10, -8, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_positives = []  # True/False를 저장하기 위한 빈 리스트\n",
+        "for x in integers:  # 리스트 integers의 원소들을 순서대로 반복하면\n",
+        "    if x > 0:\n",
+        "        is_positives.append(True)\n",
+        "    else:\n",
+        "        is_positives.append(False)\n",
+        "\n",
+        "print(is_positives)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cUhXKmGxc7XM",
+        "outputId": "69f402d1-3a59-4eb1-cc0a-88abb15dcd88"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[False, True, True, True, False, False, True, True, False, True]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1519,9 +1595,139 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "languages = ['SQL', 'Python', 'R', 'JavaScript']\n",
+        "lang_lengths = []  # 문자열의 길이들을 저장하기 위한 빈 리스트.\n",
+        "for x in languages:\n",
+        "    lang_lengths.append(len(x))\n",
+        "\n",
+        "print(lang_lengths)"
+      ],
       "metadata": {
-        "id": "73SZnRTc6-IL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "73SZnRTc6-IL",
+        "outputId": "a379a02d-4813-49b1-8f24-58353d39ea5b"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 6, 1, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# List Comprehension"
+      ],
+      "metadata": {
+        "id": "ZTMFvSrxgFx2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 ~ 10 범위의 정수들을 순서대로 저장하는 리스트\n",
+        "numbers = []\n",
+        "for x in range(1, 11):\n",
+        "    numbers.append(x)\n",
+        "\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zdpeM6qHgUC2",
+        "outputId": "9bb58d22-bc0f-4dc9-fb14-6242e56af7bd"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers2 = [x for x in range(1, 11)]\n",
+        "numbers2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0sFxyHocg46u",
+        "outputId": "8d2f9346-2ac1-4b69-b346-ba1ecaba44a6"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 ~ 20 사이의 홀수들을 저장하는 리스트: [1, 3, 5, ..., 19]\n",
+        "# odds = []\n",
+        "# for x in range(1, 20, 2):\n",
+        "#     odds.append(x)\n",
+        "odds = [x for x in range(1, 20, 2)]\n",
+        "\n",
+        "odds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XP4LjDazhr82",
+        "outputId": "e60f2872-29d5-46ec-ebd3-a13252c2438b"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 ~ 10 사이의 정수들의 제곱을 저장하는 리스트: [1, 4, 9, ..., 81, 100]\n",
+        "squares = []"
+      ],
+      "metadata": {
+        "id": "lgvNQiCLjFzw"
       },
       "execution_count": null,
       "outputs": []
