--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPla+2Hh9WBudo1TkojUjkp",
+      "authorship_tag": "ABX9TyPME6kFrwhtWVI1vn6pqJPD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1724,13 +1724,280 @@
       "cell_type": "code",
       "source": [
         "# 1 ~ 10 사이의 정수들의 제곱을 저장하는 리스트: [1, 4, 9, ..., 81, 100]\n",
-        "squares = []"
+        "# squares = []\n",
+        "# for x in range(1, 11):\n",
+        "#     squares.append(x ** 2)\n",
+        "squares = [x ** 2 for x in range(1, 11)]\n",
+        "\n",
+        "squares"
       ],
       "metadata": {
-        "id": "lgvNQiCLjFzw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lgvNQiCLjFzw",
+        "outputId": "df2c14fd-a158-4523-f8fc-39aef89c494b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0 이상 100 미만의 정수 난수 10개를 저장하는 리스트\n",
+        "rand_numbers = [random.randrange(100) for _ in range(10)]\n",
+        "rand_numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QcgGLDv3o7rR",
+        "outputId": "10b1ac2b-7378-4865-cc6a-274b9ae104f5"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[31, 86, 49, 74, 37, 43, 90, 38, 21, 12]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rand_numbers의 원소들 중 짝수들로만 이루어진 리스트\n",
+        "evens = [x for x in rand_numbers if x % 2 == 0]\n",
+        "evens"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nqYeaAfhpp-6",
+        "outputId": "70ea4724-e4b6-454b-8600-01f06518b7c8"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[86, 74, 90, 38, 12]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rand_numbers의 원소들 중 홀수들로만 이루어진 리스트\n",
+        "odds = [x for x in rand_numbers if x % 2]\n",
+        "odds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OvImwGL7qikK",
+        "outputId": "91291670-e351-4b08-d466-08f09e2f25a9"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[31, 49, 37, 43, 21]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## if-else expression(표현식)\n",
+        "\n",
+        "`value1 if condition else value2`: 조건 condition을 만족하면 value1을 그렇지 않으면 value2를 선택"
+      ],
+      "metadata": {
+        "id": "OPuAnxYsse-y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 12\n",
+        "# if x % 2 == 0:\n",
+        "#     is_even = True\n",
+        "# else:\n",
+        "#     is_even = False\n",
+        "\n",
+        "is_even = True if x % 2 == 0 else False\n",
+        "is_even"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8RR2m9Kbs6pq",
+        "outputId": "2590e248-9f4b-4e0c-9539-448e558ee4e9"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(rand_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wk_6s8jPuLZK",
+        "outputId": "f32db297-b9ef-4de1-e9e0-4fef6df7c68c"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[31, 86, 49, 74, 37, 43, 90, 38, 21, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rand_numbers의 숫자가 짝수이면 True, 홀수이면 False를 저장하는 리스트.\n",
+        "is_even = []\n",
+        "for x in rand_numbers:\n",
+        "    if x % 2 == 0:\n",
+        "        is_even.append(True)\n",
+        "    else:\n",
+        "        is_even.append(False)\n",
+        "\n",
+        "is_even"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FSWdKiOfuMrb",
+        "outputId": "70b2a9dc-3863-4cf8-b74a-6b2837655bb2"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False, True, False, True, False, False, True, True, False, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_even = []\n",
+        "for x in rand_numbers:\n",
+        "    # if x % 2 == 0:\n",
+        "    #     item = True\n",
+        "    # else:\n",
+        "    #     item = False\n",
+        "    item = True if x % 2 == 0 else False\n",
+        "    is_even.append(item)\n",
+        "\n",
+        "is_even"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W4XuLuNMuu1z",
+        "outputId": "c5619fb4-64aa-4651-d1d3-218d2d4fc350"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False, True, False, True, False, False, True, True, False, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_even = [True if x % 2 == 0 else False for x in rand_numbers]\n",
+        "is_even"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lF0UGNjbv5dw",
+        "outputId": "a5b67a89-8d6d-423d-80d4-315e9c0f00ea"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False, True, False, True, False, False, True, True, False, True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
     }
   ]
 }
