--- a/lab_python/python07_tuple.ipynb
+++ b/lab_python/python07_tuple.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwq5xrE8nT7W1wzcNScqSQ",
+      "authorship_tag": "ABX9TyP5hJg8VqSXObHMjSKLBkEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,6 +143,439 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Indexing"
+      ],
+      "metadata": {
+        "id": "YavX-QQXFWwn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[0]  # 튜플의 첫번째 아이템"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vZLAVmtlFYBh",
+        "outputId": "0f86eecb-3729-4e77-b30e-b37e226c1cc3"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[-1]  # 튜플의 마지막 아이템"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_4awd2kCFipQ",
+        "outputId": "0b5f1124-fdc7-4cac-f43f-10fe028d0f76"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Slicing"
+      ],
+      "metadata": {
+        "id": "80_HN2zCF00H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[:3]  # 튜플의 첫 3개 원소"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zPTVXrQxF2fw",
+        "outputId": "e362ad04-3d1a-43f7-939d-3e8edddb9256"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers[-3:]  # 튜플에서 마지막 3개 원소"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lliKjZVnGEr3",
+        "outputId": "bb4e0c9b-bf4a-49c0-a8c1-17106eafa68f"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# tuple과 for 반복문"
+      ],
+      "metadata": {
+        "id": "51iLp6-bGZUv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = (1, 10, -2, -20, 30)\n",
+        "for x in numbers:\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ET9yBGH0GJ7h",
+        "outputId": "171534ae-4763-4850-9c3b-7c18c449f3ea"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "10\n",
+            "-2\n",
+            "-20\n",
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for index, value in enumerate(numbers):\n",
+        "    print(index, ':', value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m-t4XELYGlbx",
+        "outputId": "787d1db2-c386-4352-fd9f-78a8e9874566"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 : 1\n",
+            "1 : 10\n",
+            "2 : -2\n",
+            "3 : -20\n",
+            "4 : 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers1 = (1, 2, 3)\n",
+        "numbers2 = (10, 20, 30)\n",
+        "for x, y in zip(numbers1, numbers2):\n",
+        "    print(x, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PCrIqG89HU7o",
+        "outputId": "7e3f522a-2580-498d-8dad-801d0f840341"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10\n",
+            "2 20\n",
+            "3 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2차원 튜플"
+      ],
+      "metadata": {
+        "id": "qqWkSYCZIODg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = (\n",
+        "    (1, 2, 3, 4),\n",
+        "    (5, 6, 7, 8),\n",
+        "    (7, 8, 9, 10)\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "FAQwF6QvIVEf"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k2BJXPy1JLUx",
+        "outputId": "9731ff8b-5f6a-4b22-8ac6-96946e9893a5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1, 2, 3, 4), (5, 6, 7, 8), (7, 8, 9, 10))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(matrix)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ur-O9nwJNyh",
+        "outputId": "e2601f72-cfb7-44c2-c28d-490996f5cd07"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9RU2MLWaJiP4",
+        "outputId": "24d54b1a-3e8f-498b-8fe0-ec84a5f98a07"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix[0][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tHUybd6mJvAp",
+        "outputId": "1925e2ee-387c-4dd3-aaf1-03e366e54be8"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix[2][3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4WaDVJwSKOVI",
+        "outputId": "8a073544-fae4-4b4b-bc07-f9ab5ffbfd25"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2차원 튜플과 for 반복문"
+      ],
+      "metadata": {
+        "id": "7BRfvOGNKjIY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in matrix:\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cz3nTY16KiYB",
+        "outputId": "fa94fe7d-101a-43e1-8914-ca1bda335128"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 3, 4)\n",
+            "(5, 6, 7, 8)\n",
+            "(7, 8, 9, 10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for row in matrix:\n",
+        "    for item in row:\n",
+        "        print(item, end='\\t')\n",
+        "    print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RX0U8lceLIZp",
+        "outputId": "f39ac8dc-cebf-4e34-a284-6537bebe447e"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\t2\t3\t4\t\n",
+            "5\t6\t7\t8\t\n",
+            "7\t8\t9\t10\t\n"
+          ]
         }
       ]
     }
