--- a/lab_python/python08_exercises.ipynb
+++ b/lab_python/python08_exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMm/pWWMyYnyLhA8pjKvfFr",
+      "authorship_tag": "ABX9TyMsaNv/AaRGaae5UDUz0a45",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,40 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "fruits = ('apple', 'banana', 'cherry', 'durian', 'watermellon')\n",
+        "\n",
+        "# lengths = []\n",
+        "# for x in fruits:\n",
+        "#     lengths.append(len(x))\n",
+        "\n",
+        "lengths = [len(x) for x in fruits]\n",
+        "\n",
+        "lengths"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dJobdlr-tVB5",
+        "outputId": "be7d17a8-c31d-4e25-cdc0-4d2fb00e7aa5"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 6, 6, 6, 11]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Ex. 2\n",
@@ -50,6 +84,111 @@
       "metadata": {
         "id": "1RLbm59cA5xm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "wG8Zqwr4vTx5"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# gender_codes = []\n",
+        "# for _ in range(10):\n",
+        "#     gender_codes.append(random.randrange(1, 5))\n",
+        "gender_codes = [random.randrange(1, 5) for _ in range(10)]\n",
+        "\n",
+        "print(gender_codes)\n",
+        "\n",
+        "genders = []\n",
+        "for x in gender_codes:\n",
+        "    if x in (1, 3):  # if x == 1 or x == 3:\n",
+        "        genders.append('Male')\n",
+        "    else:\n",
+        "        genders.append('Female')\n",
+        "\n",
+        "print(genders)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XxTk6sO6v41i",
+        "outputId": "bcb06ec5-2f96-4fba-9b96-33816aa9d73b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 2, 1, 2, 4, 4, 3, 4, 2, 1]\n",
+            "['Male', 'Female', 'Male', 'Female', 'Female', 'Female', 'Male', 'Female', 'Female', 'Male']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "genders = []\n",
+        "for x in gender_codes:\n",
+        "    # if x in (1, 3):\n",
+        "    #     gender = 'Male'\n",
+        "    # else:\n",
+        "    #     gender = 'Female'\n",
+        "    gender = 'Male' if x in (1, 3) else 'Female'\n",
+        "    genders.append(gender)\n",
+        "\n",
+        "print(genders)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5L_5OCM7xuiq",
+        "outputId": "a9443bb0-d75a-4b7c-96d8-5bdaeaccb280"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Male', 'Female', 'Male', 'Female', 'Female', 'Female', 'Male', 'Female', 'Female', 'Male']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "genders = ['Male' if x in (1, 3) else 'Female' for x in gender_codes]\n",
+        "print(genders)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TnDwkQDgzNVL",
+        "outputId": "37e42aad-6e82-4b8d-d571-45a44ed8a68d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Male', 'Female', 'Male', 'Female', 'Female', 'Female', 'Male', 'Female', 'Female', 'Male']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -71,6 +210,54 @@
       "metadata": {
         "id": "eeFh216DBE2u"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m1 = [\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6]\n",
+        "]\n",
+        "m2 = [\n",
+        "    [1, 1, 1],\n",
+        "    [2, 2, 2]\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "qYJ62DEyzuFq"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = []  # m1 - m2의 결과를 저장할 리스트\n",
+        "for row1, row2 in zip(m1, m2):\n",
+        "    row_minus = []  # 1차원 배열의 각 원소들끼리 뺄셈 결과를 저장할 리스트\n",
+        "    for x, y in zip(row1, row2):\n",
+        "        row_minus.append(x - y)\n",
+        "    result.append(row_minus)\n",
+        "\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ejfyj5Pk06Ur",
+        "outputId": "c2bba5a1-131f-44cc-f320-eb7472dc9802"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0, 1, 2], [2, 3, 4]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
