--- a/lab_python/python08_exercises.ipynb
+++ b/lab_python/python08_exercises.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsaNv/AaRGaae5UDUz0a45",
+      "authorship_tag": "ABX9TyPv8IkWQc72CHe8MxYjrVel",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,6 +260,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "result = [[x - y for x, y in zip(row1, row2)]\n",
+        "          for row1, row2 in zip(m1, m2)]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7GHWgSr7-ZN",
+        "outputId": "5edfb734-4f2f-43fc-f54a-f38a9f2f6b18"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0, 1, 2], [2, 3, 4]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Ex. 4\n",
@@ -268,6 +293,31 @@
       "metadata": {
         "id": "CZIUpRZBBZNF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_of_items = 5\n",
+        "scores = [random.randrange(1, 11) for _ in range(num_of_items)]\n",
+        "print(scores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gJLKH1B49T41",
+        "outputId": "11af2234-d1ab-4501-dc70-bd18fe44ce89"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 8, 5, 9, 4]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -280,6 +330,59 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "sum(scores)  # Python 제공되는 합계를 계산하는 함수"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "slgYT9RC-KVt",
+        "outputId": "c778d25e-0a47-41ff-d65a-b0f68f863e90"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "for x in scores:\n",
+        "    total += x\n",
+        "\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BOQl2V5s-10-",
+        "outputId": "15470891-0112-46cc-a246-d198ab6a7247"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Ex. 6\n",
@@ -288,6 +391,30 @@
       "metadata": {
         "id": "rembhN0UBiR1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean = total / num_of_items\n",
+        "print(mean)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IM6r-hqA_liG",
+        "outputId": "3bf4bb6c-bf24-48b2-d9fc-f4e4aa5e16ce"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -300,6 +427,40 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# variances = []\n",
+        "# for x in scores:\n",
+        "#     variances.append((x - mean) ** 2)\n",
+        "variances = [(x - mean) ** 2 for x in scores]\n",
+        "# print(variances)\n",
+        "\n",
+        "sum_of_variances = 0\n",
+        "for x in variances:\n",
+        "    sum_of_variances += x\n",
+        "\n",
+        "var = sum_of_variances / (num_of_items - 1)\n",
+        "print(var)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6uAgVUa_5yO",
+        "outputId": "2bc82fe7-be57-41d6-a9c2-0bc3f1e74e0c"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.7\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Ex. 8\n",
@@ -308,6 +469,30 @@
       "metadata": {
         "id": "fHHrDijhBvQd"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "std = var ** 0.5\n",
+        "print(std)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ITWnZlpD5G3",
+        "outputId": "739fc08f-6beb-4dfc-ccc1-5fba12fe22df"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.588435821108957\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
